sql/sql_select.cc
@@ -5218,15 +5218,9 @@ select_handler *find_select_handler_inner(THD *thd,
                                     SELECT_LEX *select_lex,
                                     SELECT_LEX_UNIT *select_lex_unit)
 {
-  if (select_lex->master_unit()->outer_select() ||
-      (select_lex_unit && select_lex->master_unit()->with_clause))
-  {
-    /*
-      Pushdown is not supported neither for non-top-level SELECTs nor for parts
-      of SELECT_LEX_UNITs that have CTEs (SELECT_LEX_UNIT::with_clause)
-    */
+  // Pushdown is not supported for non-top-level SELECTs
+  if (select_lex->master_unit()->outer_select())
     return 0;
-  }
 
   TABLE_LIST *tbl= nullptr;
   // For SQLCOM_INSERT_SELECT the server takes TABLE_LIST
@@ -34602,6 +34596,9 @@ bool Sql_cmd_dml::execute_inner(THD *thd)
   SELECT_LEX_UNIT *unit = &lex->unit;
   SELECT_LEX *select_lex= unit->first_select();
   JOIN *join= select_lex->join;
+
+  // look for select_handler provided by engines
+  select_lex->pushdown_select= find_single_select_handler(thd, select_lex);
 
   if (join->optimize())
     goto err;
